# guayadeque

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ChangeLog  Changelog.md  INSTALL.md  RADIOS.md  README.md  build  buildd  buildt
.github/: FUNDING.yml
debian/: changelog  control  rules
defconfig/: guayadeque.default.conf  guayadeque.desktop  lyrics_sources.xml  org.guayadeque.Guayadeque.desktop  org.guayadeque.Guayadeque.metainfo.xml  org.guayadeque.guayadeque.desktop  org.guayadeque.guayadeque.metainfo.xml
po/: external.pot  guayadeque.pot
po/bg/: guayadeque.po
po/ca_ES/: guayadeque.po
po/cs/: guayadeque.po
po/da/: guayadeque.po
po/de/: guayadeque.po
po/el/: guayadeque.po
po/es/: guayadeque.po
po/fr/: guayadeque.po
po/hr/: guayadeque.po
po/hu/: guayadeque.po
po/is/: guayadeque.po
po/it/: guayadeque.po
po/ja/: guayadeque.po
po/lt/: guayadeque.po
po/ms/: guayadeque.po
po/nb/: guayadeque.po
po/nl/: guayadeque.po
po/pl/: guayadeque.po
po/pt/: guayadeque.po
po/pt_BR/: guayadeque.po
po/ru/: guayadeque.po
po/sk/: guayadeque.po
po/sr/: guayadeque.po
po/sr@latin/: guayadeque.po
po/sv/: guayadeque.po
po/th/: guayadeque.po
po/tr/: guayadeque.po
po/uk/: guayadeque.po
src/: CMakeLists.txt  MainApp.cpp  MainApp.h  Settings.h  Version.h.in
src/audio/: FaderPlaybin.cpp  FaderPlaybin.h  FaderTimeLine.cpp  FaderTimeLine.h  GstPipelineActuator.cpp  GstPipelineActuator.h  GstPipelineBuilder.cpp  GstPipelineBuilder.h  GstTypeFinder.cpp  GstTypeFinder.h  GstTypes.h  GstUtils.cpp  GstUtils.h  LevelInfo.h  MediaCtrl.cpp  MediaCtrl.h  MediaEvent.cpp  MediaEvent.h  MediaRecordCtrl.cpp  MediaRecordCtrl.h  RadioTagInfo.h
src/collections/: Collections.cpp  Collections.h  LibUpdate.cpp  LibUpdate.h
src/config/: Config.cpp  Config.h  ConfigConsts.h
src/copyto/: CopyTo.cpp  CopyTo.h  Transcode.cpp  Transcode.h
src/db/: Db.cpp  Db.h  DbCache.cpp  DbCache.h  DbLibrary.cpp  DbLibrary.h  DbListBox.cpp  DbListBox.h  DbRadios.cpp  DbRadios.h
src/dbus/: gsession.cpp  gsession.h  gudbus.cpp  gudbus.h  mmkeys.cpp  mmkeys.h  mpris.cpp  mpris.h  mpris2.cpp  mpris2.h  notify.cpp  notify.h
src/images/: Images.cpp  Images.h  add.h  blank_cd_cover.h  bookmark.h  default_lastfm_image.h  del.h  doc_new.h  doc_save.h  down.h  download_covers.h  edit.h  edit_clear.h  edit_copy.h  edit_delete.h  exit.h  filter.h  go_bottom.h  go_down.h  go_top.h  go_up.h  guayadeque.h  guayadeque_taskbar.h  lastfm_as_off.h  lastfm_as_on.h  lastfm_on.h  left.h  loc_jamendo.h  loc_lastfm.h  loc_library.h  loc_lyrics.h  loc_magnatune.h  loc_net_radio.h  loc_podcast.h  loc_portable_device.h  mid_podcast.h  musicbrainz.h  net_radio.h  no_cover.h  no_photo.h  (+129 more)
src/images/orig/: guayadeque.xpm  header.inc
src/info/audioscrobble/: AudioScrobble.cpp  AudioScrobble.h
src/info/lastfm/: LastFM.cpp  LastFM.h
src/info/musicbrainz/: AcousticId.cpp  AcousticId.h  MusicBrainz.cpp  MusicBrainz.h
src/info/smartmode/: SmartMode.cpp  SmartMode.h
src/misc/: Accelerators.cpp  Accelerators.h  ArrayStringArray.cpp  ArrayStringArray.h  EventCommandIds.h  GIO_Volume.cpp  GIO_Volume.h  MD5.cpp  ThreadArray.h  TimeLine.cpp  TimeLine.h  Utils.cpp  Utils.h
src/network/: Curl.cpp  Curl.h  Http.cpp  Http.h
src/onlinelinks/: OnlineLinks.cpp  OnlineLinks.h
src/taginfo/: TagInfo.cpp  TagInfo.h
src/ui/: MainFrame.cpp  MainFrame.h
src/ui/aui/: AuiDockArt.cpp  AuiDockArt.h  AuiManagedPanel.cpp  AuiManagedPanel.h  AuiManagerPanel.cpp  AuiManagerPanel.h  AuiNotebook.cpp  AuiNotebook.h
src/ui/autopulsegauge/: AutoPulseGauge.cpp  AutoPulseGauge.h
src/ui/autoscrolltext/: AutoScrollText.cpp  AutoScrollText.h
src/ui/confirmexit/: ConfirmExit.cpp  ConfirmExit.h
src/ui/cover/: Apple.cpp  Apple.h  CoverEdit.cpp  CoverEdit.h  CoverFetcher.cpp  CoverFetcher.h  CoverFrame.cpp  CoverFrame.h  CoverPanel.cpp  CoverPanel.h  CoverWindow.cpp  CoverWindow.h  Discogs.cpp  Discogs.h  Google.cpp  Google.h  LastFMCovers.cpp  LastFMCovers.h  SelCoverFile.cpp  SelCoverFile.h  Yahoo.cpp  Yahoo.h
src/ui/equalizer/: Equalizer.cpp  Equalizer.h
src/ui/filebrowser/: FileBrowser.cpp  FileBrowser.h  FileRenamer.cpp  FileRenamer.h
src/ui/itemlistbox/: AccelListBox.cpp  AccelListBox.h  ItemListBox.cpp  ItemListBox.h  ListView.cpp  ListView.h
src/ui/jamendo/: Jamendo.cpp  Jamendo.h
src/ui/labeleditor/: LabelEditor.cpp  LabelEditor.h
src/ui/lastfmpanel/: LastFMPanel.cpp  LastFMPanel.h  ShowImage.cpp  ShowImage.h
src/ui/locationpanel/: LocationPanel.cpp  LocationPanel.h
src/ui/lyrics/: LyricsPanel.cpp  LyricsPanel.h
src/ui/magnatune/: Magnatune.cpp  Magnatune.h
src/ui/mediaviewer/: MediaViewer.cpp  MediaViewer.h  MediaViewerLibrary.cpp  MediaViewerLibrary.h
src/ui/mediaviewer/albumbrowser/: AlbumBrowser.cpp  AlbumBrowser.h
src/ui/mediaviewer/audiocd/: AudioCdPanel.cpp  AudioCdPanel.h
src/ui/mediaviewer/importfiles/: ImportFiles.cpp  ImportFiles.h
src/ui/player/: PlayList.cpp  PlayList.h  PlayerFilters.cpp  PlayerFilters.h  PlayerPanel.cpp  PlayerPanel.h  TrackChangeInfo.cpp  TrackChangeInfo.h
src/ui/podcasts/: ChannelEditor.cpp  ChannelEditor.h  NewChannel.cpp  NewChannel.h  Podcasts.cpp  Podcasts.h  PodcastsPanel.cpp  PodcastsPanel.h
src/ui/preferences/: Preferences.cpp  Preferences.h
src/ui/radios/: RadioEditor.cpp  RadioEditor.h  RadioGenreEditor.cpp  RadioGenreEditor.h  RadioPanel.cpp  RadioPanel.h  RadioProvider.cpp  RadioProvider.h  Shoutcast.cpp  Shoutcast.h  ShoutcastRadio.cpp  ShoutcastRadio.h  TuneInRadio.cpp  TuneInRadio.h  UserRadio.cpp  UserRadio.h
src/ui/ratingctrl/: RatingCtrl.cpp  RatingCtrl.h
src/ui/roundbutton/: RoundButton.cpp  RoundButton.h
src/ui/splash/: SplashWin.cpp  SplashWin.h
src/ui/staticbitmap/: StaticBitmap.cpp  StaticBitmap.h
src/ui/statusbar/: StatusBar.cpp  StatusBar.h
src/ui/taskbar/: TaskBar.cpp  TaskBar.h
src/ui/toggleroundbutton/: ToggleRoundButton.cpp  ToggleRoundButton.h
src/ui/trackedit/: TrackEdit.cpp  TrackEdit.h
src/ui/volumeframe/: VolumeFrame.cpp  VolumeFrame.h
src/ui/vumeters/: Vumeters.cpp  Vumeters.h
(+22 files in other folders)
